# docs-doc

./: .gitignore  LICENSE  README.md  pyproject.toml
docs_doc/: __init__.py  __main__.py  cli.py  discovery.py
docs_doc/analysis/: __init__.py  dependencies.py  detectors.py  models.py  service.py
docs_doc/renderers/: __init__.py  markdown.py  mermaid.py  terminal.py
tests/: test_analysis.py  test_cli.py
tests/fixtures/generic_repo/: README.md
tests/fixtures/generic_repo/config/: settings.yml
tests/fixtures/generic_repo/docs/: architecture.md
tests/fixtures/generic_repo/scripts/: release.sh
tests/fixtures/monorepo/: README.md  package.json
tests/fixtures/node_app/: README.md  package.json
tests/fixtures/node_app/src/: config.js  routes.js  server.js  store.js
tests/fixtures/python_app/: Dockerfile  README.md  pyproject.toml
tests/fixtures/python_app/.github/workflows/: test.yml
tests/fixtures/python_app/app/: main.py  routes.py  services.py
tests/fixtures/python_app/tests/: test_smoke.py
tests/snapshots/: python_flow.md  python_flow.mmd
