[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-doc"
version = "0.1.0"
description = "A CLI that helps developers understand unfamiliar repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Anurag Kaushik" }
]
dependencies = [
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
docs-doc = "docs_doc.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["docs_doc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
